// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HelpCard tests should render the card component 1`] = `
<DocumentFragment>
  <section
    class="card card--has-link"
    data-testid="help-card"
  >
    <a
      aria-hidden="true"
      class="card__link"
      data-testid="background-link"
      href="/help/help-page"
      tabindex="-1"
    />
    <div
      class="card__container"
    >
      <div
        class="card__header"
      >
        <h2
          class="tiny"
          data-testid="help-title"
        >
          <a
            href="/help/help-page"
          >
            What is the canonical sequence? Are all isoforms described in one entry?
          </a>
        </h2>
      </div>
      <div
        class="card__content"
      />
    </div>
  </section>
</DocumentFragment>
`;

exports[`HelpCard tests should render the card component and find highlights 1`] = `
<DocumentFragment>
  <section
    class="card card--has-link"
    data-testid="help-card"
  >
    <a
      aria-hidden="true"
      class="card__link"
      data-testid="background-link"
      href="/help/help-page"
      tabindex="-1"
    />
    <div
      class="card__container"
    >
      <div
        class="card__header"
      >
        <h2
          class="tiny"
          data-testid="help-title"
        >
          <a
            href="/help/help-page"
          >
            <span>
              What is the 
              <span
                class="match-highlight"
              >
                canonical
              </span>
               sequence? Are all isoforms described in one entry?
            </span>
          </a>
        </h2>
      </div>
      <div
        class="card__content"
      >
        <span>
          What is the 
          <span
            class="match-highlight"
          >
            canonical
          </span>
           sequence? To reduce redundancy, the UniProtKB/Swiss-Prot policy
        </span>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
